--- a/src/app/user-table/user-table.component.html
+++ b/src/app/user-table/user-table.component.html
@@ -141,7 +141,7 @@
                                                     style="height:250px; width:200px; margin-bottom: 10px; border-radius: 10px;"
                                                     class="thumbnail"></div>
                                             <div>
-                                                <input hidden type="file" style="font-size: 0.75rem;" mdbRipple
+                                                <input hidden type="file" name="file" style="font-size: 0.75rem;" [(ngModel)]="userInfo.file"  mdbRipple
                                                     rippleColor="dark" #profileUpload
                                                     (change)="onChangeFileField($event)" />
                                                 <button type="button" class="btn btn-primary btn-sm"
@@ -327,7 +327,7 @@
                                                 style="color: black;">{{userInfo.fname}} {{userInfo.lname}}</b></li>
 
                                         <button [routerLink]="['/manageUsertable']" type="button"
-                                            class="btn btn-info btn-sm" style="margin-left: 820px;">Cancel</button>
+                                            class="btn btn-info btn-sm" style="margin-left: 810px;">Cancel</button>
                                     </ol>
                                 </nav>
                             </div>
@@ -342,7 +342,7 @@
                                                 style="height:136x; width:136px; margin-bottom: 10px;"
                                                 class="thumbnail"></div>
                                         <div>
-                                            <input hidden type="file" style="font-size: 0.75rem;" mdbRipple
+                                            <input hidden type="file" name="file" style="font-size: 0.75rem;" mdbRipple [(ngModel)]="userInfo.file" 
                                                 rippleColor="dark" #profileUpload
                                                 (change)="onChangeFileField($event)" />
                                             <button type="button" class="btn btn-primary btn-sm"
